tests/e2e/when_invalid_action.error
Error: syntax error in story at line 2, column 6

2|    when a listen path: "/" as r
           

E0144: No event listener with output `a` for event `listen`.
