tests/e2e/when_invalid_action.story
a = 1
when a listen path: "/" as r
    r write content: "foobar"
